# kivy_UI_Example

./: .dockerignore  .gitattributes  .gitignore  README.md  database.txt  db.sqlite3  main.py  manage.py  pyproject.toml  requirements.txt  run  run.sh
_files/: blog.py  category.csv  dataBase.py  settingsScreen.py  srote  store.db  user.csv  users.csv
_files/data/: allTransactions.db  inventory.db  shifts.db  transactions.db
_test/: main.py
app/: __init__.py  main.kv  view.py
libs/: database_Conf.py  sql_json.py  workOnDatabase.py
libs/garden/garden.iconfonts/: .gitignore  LICENSE
test/: m.py
views/admin/: admin.kv  admin.py
views/auth/: auth.kv  auth.py
views/home/: home.py
views/insights/: insights.kv  insights.py
views/pos/: __init__.py  pos.kv  pos.py
views/stocks/: stocks.py
views/users/: users.kv  users.py
widgets/: popups.py  search_widget.py  textfields.py
widgets/kivyplt/: README.md
